# RoSync

./: .gitignore  LICENSE  README.md  RoSync.sln  vcpkg.json
src/: CMakeLists.txt  RoSync.vcxproj  RoSync.vcxproj.filters  file_patch.h  file_tracker.cpp  file_tracker.h  main.cpp  request.cpp  request.h  response.cpp  response.h  rosync.cpp  rosync.h  session.cpp  session.h  session_container.cpp  session_container.h  status_code.h  status_exception.h  sync_directory.cpp  sync_directory.h  sync_manager.cpp  sync_manager.h  utils.h  vcpkg.json
src/core/: CMakeLists.txt
src/webservice/: CMakeLists.txt
src/webservice/include/: request.h  response.h  response_transformer.h  session.h  session_manager.h  status_code.h
src/webservice/src/: request.cpp  session.cpp  session_manager.cpp  webservice.cpp
